--- a/Client/package.json
+++ b/Client/package.json
@@ -1,14 +1,35 @@
 {
-  "name": "client",
+  "name": "react-test",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
+    "@date-io/dayjs": "^2.11.0",
+    "@date-io/luxon": "^2.11.1",
+    "@date-io/moment": "^2.11.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/lab": "^5.0.0-alpha.53",
+    "@mui/material": "^5.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.25.0",
+    "framer": "^1.3.6",
+    "framer-motion": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.3.0",
+    "react-sticky": "^6.0.3",
+    "react-sticky-header": "^0.2.0",
+    "react-string-avatar": "^1.2.2",
+    "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
