--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "date-fns": "^2.25.0",
     "framer": "^1.3.6",
     "framer-motion": "^5.0.2",
@@ -29,7 +30,9 @@
     "react-sticky": "^6.0.3",
     "react-sticky-header": "^0.2.0",
     "react-string-avatar": "^1.2.2",
+    "react-use-gesture": "^9.1.3",
     "react-visibility-sensor": "^5.1.1",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
