--- a/Server/config.env
+++ b/Server/config.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://Admin:1234@cluster0.3embs.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://Admin:1234@cluster0.3embs.mongodb.net/AirlineDB?retryWrites=true&w=majority
