--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^5.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.3.0",
@@ -36,6 +37,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "build-css": "tailwindcss build src/styles.css -o public/styles.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -58,5 +60,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19"
   }
 }
