--- a/Client/package.json
+++ b/Client/package.json
@@ -27,10 +27,12 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-seat-picker": "^1.5.3",
     "react-spring": "^9.3.0",
     "react-sticky": "^6.0.3",
     "react-sticky-header": "^0.2.0",
     "react-string-avatar": "^1.2.2",
+    "react-tooltip": "^4.2.21",
     "react-use-gesture": "^9.1.3",
     "react-visibility-sensor": "^5.1.1",
     "reactjs-popup": "^2.0.5",
