--- a/Server/config.env
+++ b/Server/config.env
@@ -1,1 +1,3 @@
 ATLAS_URI=mongodb+srv://Admin:1234@cluster0.3embs.mongodb.net/AirlineDB?retryWrites=true&w=majority
+username:airlineszeyad@gmail.com
+password:Edcwsxqaz1234
