--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "framer": "^1.3.6",
     "framer-motion": "^5.0.2",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
