--- a/Server/package.json
+++ b/Server/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "stripe": "^8.194.0"
   }
 }
