--- a/Client/package.json
+++ b/Client/package.json
@@ -24,8 +24,10 @@
     "framer-motion": "^5.0.2",
     "react": "^17.0.2",
     "react-card-flip": "^1.1.3",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-payment-inputs": "^1.1.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-seat-picker": "^1.5.3",
@@ -37,6 +39,7 @@
     "react-use-gesture": "^9.1.3",
     "react-visibility-sensor": "^5.1.1",
     "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
