--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +20,9 @@
     "mongoose": "^6.0.12",
     "nodemailer": "^6.7.2",
     "stripe": "^8.194.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.5",
+    "supertest": "^6.1.6"
   }
 }
