--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.25.0",
     "framer": "^1.3.6",
     "framer-motion": "^5.0.2",
