--- a/Client/package.json
+++ b/Client/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "4.0.3",
     "react-seat-picker": "^1.5.3",
     "react-spring": "^9.3.0",
+    "react-step-progress-bar": "^1.0.3",
     "react-sticky": "^6.0.3",
     "react-sticky-header": "^0.2.0",
     "react-string-avatar": "^1.2.2",
