--- a/Server/package.json
+++ b/Server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node main",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +19,5 @@
     "mongoose": "^6.0.12",
     "nodemailer": "^6.7.2",
     "stripe": "^8.194.0"
-  },
-  "devDependencies": {
-    "jest": "^27.4.5",
-    "supertest": "^6.1.6"
   }
 }
