--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "date-fns": "^2.25.0",
+    "dotenv": "^10.0.0",
     "framer": "^1.3.6",
     "framer-motion": "^5.0.2",
     "react": "^17.0.2",
