--- a/Client/package.json
+++ b/Client/package.json
@@ -24,9 +24,11 @@
     "framer": "^1.3.6",
     "framer-motion": "^5.0.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-card-flip": "^1.1.3",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-icons": "^4.3.1",
     "react-payment-inputs": "^1.1.8",
     "react-router-dom": "^5.3.0",
