--- a/Client/package.json
+++ b/Client/package.json
@@ -44,6 +44,7 @@
     "react-visibility-sensor": "^5.1.1",
     "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.3",
+    "use-force-update": "^1.0.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
